--- a/angular/pdata/fastapi/src/app/desktop/desktop.component.html
+++ b/angular/pdata/fastapi/src/app/desktop/desktop.component.html
@@ -3,20 +3,24 @@
   <div class="row">
 
     <div class="col-md-2" style="text-align:center">
-      <a href="#"><img src="/assets/img/MCSIcon.png" style="height:50px" class="logo"></a>
-      <h5 class="d-inline-block nova">MCS Time Sheet</h5>
+      <a href="#"><img src="/assets/img/Working Logo Icon.png" style="height:50px" class="logo"></a>
+    
     </div>
 
     <div class="col-md-8" style="text-align:center">
-      <p>{{ today | date : 'fullDate' }}</p>
+      <p><app-clock></app-clock></p>
     </div>
 
     <div class="col-md-2" style="text-align:center">
-      <div class="mb-3" *ngIf="user.username">{{ user.username }}</div>
-      <button class="btn btn-sm btn-outline-warning ml-3"                       (click)="logOff()">Log Off</button>
+      <div class="mb-3" *ngIf="user.username"><h6>{{ user.username }}</h6></div>
+      <button class="btn btn-sm btn-outline-warning ml-3" (click)="logOff()">Log Off</button>
+      
     </div>
 
   </div>
-<button (click)='getUserList()'>User List</button><br>
-{{token}}
+</div>
+<div>
+  Time Remaining on Token
+  {{token_ttl | json}}
+
 </div>
