--- a/angular/pdata/fastapi/src/assets/css/fastapi.css
+++ b/angular/pdata/fastapi/src/assets/css/fastapi.css
@@ -27,8 +27,9 @@
   }
 
   h6 {
-      font-size:11pt;
-      font-family:nova
+      font-size:12pt;
+      font-family:OpenSans;
+      font-weight:bold;
   }
 
   .align-center {
